--- a/dev/index.html
+++ b/dev/index.html
@@ -29,8 +29,9 @@
   <body>
     <embed-pivot
       data-pivot-url="https://pivot-interactives-embed.s3-us-west-2.amazonaws.com/illuminate/solution-enthalpy.html"
-      data-width="1200"
-      data-height="800"
+      data-width="100%"
+      data-height="100%"
+      data-min-height="400px"
     ></embed-pivot>
   </body>
 </html>
